language/move-lang/tests/move_check/borrows/dereference_field_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- Field 'f' is still being mutably borrowed by this reference
12 │         *s;
   │         ^^ Invalid dereference.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_field_invalid.move:16:9
   │
15 │         let f = id_mut(&mut s.f);
   │                 ---------------- Field 'f' is still being mutably borrowed by this reference
16 │         *s;
   │         ^^ Invalid dereference.

